# scitos_2d_navigation

clear_voxels_recovery/: CMakeLists.txt  cvr_plugin.xml  package.xml
clear_voxels_recovery/include/clear_voxels_recovery/: clear_voxels_recovery.h
clear_voxels_recovery/src/: clear_voxels_recovery.cpp
launch/: move_base_3d.launch  scitos_2d_nav.launch
scitos_2d_navigation/: CMakeLists.txt  package.xml
scitos_2d_navigation/launch/: move_base_3d.launch
scitos_2d_navigation/scitos_move_base_params_3d/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
scitos_move_base_params_3d/: costmap_common_params.yaml  global_costmap_params.yaml
